@@ -1,4 +1,5 @@
 --enable-native-access=ALL-UNNAMED
+--sun-misc-unsafe-memory-access=allow
 -Dfile.encoding=UTF-8
 -Dsun.jnu.encoding=UTF-8
 -Dstdout.encoding=UTF-8
